--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,7 +3,9 @@
 Version 0.3
 
 * Only place tiles on the map that have a 'transformed' flag
-* Debug possibilities
+* Debug window for current center/polygon (F3)
+* Debug map (F4/F5)
+* Switch from grid map to a graph
 
 Version 0.2
 
