--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Version 0.3
 * Debug window for current center/polygon (F3)
 * Debug map (F4/F5)
 * Switch from grid map to a graph
+* Start Colony gameplay mode
 
 Version 0.2
 
