WIP: Inventory exchange view/state

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
 
+Version 0.4
+
+* Fixed sunlight
+* Add some shaders
+* Colonists to move around
+* Inventories
+* Colonists die when air runs out
 
 Version 0.3
 
