--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,7 +4,7 @@ Version 0.4
 * Fixed sunlight
 * Add some shaders
 * Colonists to move around
-* Inventories
+* Inventories, exchange items between them
 * Colonists die when air runs out
 
 Version 0.3
