--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,7 +1,7 @@
 
 Version 0.4
 
-* Fixed sunlight
+* Sunlight for map
 * Add some shaders
 * Colonists to move around
 * Inventories, exchange items between them
