Start with WaterSource to flood the map

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Version 0.4
 * Colonists to move around
 * Inventories, exchange items between them
 * Colonists die when air runs out
+* Oxygen generator
 
 Version 0.3
 
