--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ Version 0.4
 * Inventories, exchange items between them
 * Colonists die when air runs out
 * Oxygen generator
+* Workshop to mutate your EvoKits
 
 Version 0.3
 
