Show entity interaction menu by the mouse pointer, solved a lot of problems

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+Version 0.5
+* Miner
+* Pump
+* New entity images
+* Added HSUL to have much better colour generation
+* Show entity interaction menu by the mouse pointer, solved a lot of problems
 
 Version 0.4 (2014-09-22)
 
