Add evokit extensions Fauna and add a first animal which is muching away trees

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ Version 0.5
 * New entity images
 * Added HSUL to have much better colour generation
 * Show entity interaction menu by the mouse pointer, solved a lot of problems
+* Started with animals, muching away trees
 
 Version 0.4 (2014-09-22)
 
